# Clickjacking-POC

./: .gitignore  README.md  example.com.html  pyproject.toml
src/clickjacking_poc/: __main__.py
